opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/vif"
dev-repo: "git+https://github.com/robur-coop/vif.git"
bug-reports: "https://github.com/robur-coop/vif/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "2.0.0"}
  "uri"
  "fmt"
  "bos"
  "logs"
  "fpath"
  "bytesrw"
  "jsont"
  "cmdliner"
  "httpcats" {>= "0.1.0"}
  "tyre"
  "mirage-crypto-rng-miou-unix"
  "jsonm"
  "decompress"
  "conan-unix" {>= "0.0.6"}
  "conan-database"
  "multipart_form-miou"
  "hmap"
  "tyxml"
  "hurl" {with-test}
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
synopsis: "A simple web framework for OCaml 5"
