opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/vif"
dev-repo: "git+https://github.com/robur-coop/vif.git"
bug-reports: "https://github.com/robur-coop/vif/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "2.8.0"}
  "uri" {>= "4.4.0"}
  "fmt" {>= "0.11.0"}
  "bos" {>= "0.2.1"}
  "logs" {>= "0.9.0"}
  "fpath" {>= "0.7.3"}
  "bytesrw"
  "jsont" {>= "0.2.0"}
  "cmdliner" {>= "1.3.0"}
  "httpcats" {>= "0.1.0"}
  "tyre" {>= "0.5"}
  "mirage-crypto-rng-miou-unix"
  "jsonm" {>= "1.0.2"}
  "decompress" {>= "1.5.0"}
  "conan-unix" {>= "0.0.6"}
  "conan-database"
  "multipart_form-miou"
  "hmap"
  "tyxml" {>= "4.6.0"}
  "hurl" {with-test}
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [ "dune" "runtest" "-p" name "-j1" ]
synopsis: "A simple web framework for OCaml 5"
x-ci-accept-failures: ["debian-11"]
