opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/vif"
dev-repo: "git+https://github.com/robur-coop/vif.git"
bug-reports: "https://github.com/robur-coop/vif/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.0.0"}
  "uri" {>= "4.4.0"}
  "fmt" {>= "0.11.0"}
  "bos" {>= "0.2.1"}
  "logs" {>= "0.9.0"}
  "fpath" {>= "0.7.3"}
  "bytesrw"
  "flux" {>= "0.0.1~beta5"}
  "fluxt" {>= "0.0.1~beta2"}
  "jsont" {>= "0.2.0"}
  "cmdliner" {>= "1.3.0"}
  "httpcats" {>= "0.2.0"}
  "tyre" {>= "1.0"}
  "mirage-crypto-rng-miou-unix"
  "decompress" {>= "1.5.0"}
  "conan-unix" {>= "0.0.6"}
  "conan-database"
  "multipart_form-miou"
  "hmap"
  "tyxml" {>= "4.6.0"}
  "hurl" {with-test}
  "jws" {with-test}
  "caqti" {with-test & >= "2.3.0"}
  "caqti-miou" {with-test}
  "caqti-driver-sqlite3" {with-test}
  "brr" {with-test}
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j1" ] {arch != "s390x"}
]
synopsis: "A simple web framework for OCaml 5"
x-ci-accept-failures: ["debian-11"]
pin-depends: [
  [ "hurl.dev" "git+https://github.com/robur-coop/hurl.git#054446c616026e927de575c3e483cd6876a10068" ]
  [ "miou.dev" "git+https://github.com/robur-coop/miou.git#4e8fd306c305142035f65a1339ca1aa9f011c955" ]
  [ "httpcats.dev" "git+https://github.com/robur-coop/httpcats.git#6b19476a1fa95cdee34150ba8e4f5636d343b908" ]
]
