opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/vif"
dev-repo: "git+https://github.com/robur-coop/vif.git"
bug-reports: "https://github.com/robur-coop/vif/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.0.0"}
  "vif" {= version}
  "mhttp"
  "mirage-crypto-rng-mkernel"
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j1" ] {arch != "s390x"}
]
synopsis: "A simple web framework for OCaml 5"
x-ci-accept-failures: ["debian-11"]
pin-depends: [
  [ "mkernel.dev" "git+https://git.robur.coop/robur/mkernel.git#81a20185f638854ae07e64bbc1a5400bf6588776" ]
  [ "utcp.dev" "git+https://github.com/dinosaure/utcp.git#50d0f3a0b42e8ffd3e4b15131dcf2a61b87ef96b" ]
  [ "mnet.dev" "git+https://git.robur.coop/robur/mnet.git#26214790b53df78c00eafc48594cfa01290de0df" ]
  [ "ocaml-unikraft.1.0.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
  [ "ocaml-unikraft-backend-qemu.0.18.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
  [ "httpcats.dev" "git+https://github.com/robur-coop/httpcats.git#56ad42dd5667c1699240c609fd0e193f88bba1fb" ]
  [ "mirage-crypto-rng-mkernel.2.0.2" "git+https://github.com/dinosaure/mirage-crypto.git#820db4c1d19acd06dca82ce5615904848a852951" ]
  [ "mhttp.dev" "git+https://github.com/dinosaure/mhttp.git#0638dd4620757c0a8062afaa75d1546ae206a604" ]
  [ "ocaml-unikraft.1.0.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
  [ "ocaml-unikraft-x86_64.1.0.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
  [ "ocaml-unikraft-toolchain-x86_64.0.18.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
  [ "ocaml-unikraft-default-x86_64.1.0.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
  [ "ocaml-unikraft-arm64.1.0.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
  [ "ocaml-unikraft-default-arm64.1.0.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
  [ "ocaml-unikraft-toolchain-arm64.0.18.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
  [ "ocaml-unikraft-backend-qemu.0.18.0" "git+https://github.com/mirage/ocaml-unikraft.git#9becd4cae4612f5250753eae896b3e173108ab0f" ]
]
