opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/vif"
dev-repo: "git+https://github.com/robur-coop/vif.git"
bug-reports: "https://github.com/robur-coop/vif/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.0.0"}
  "vif" {= version}
  "mhttp"
  "mirage-crypto-rng-mkernel"
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j1" ] {arch != "s390x"}
]
synopsis: "A simple web framework for OCaml 5"
x-ci-accept-failures: ["debian-11"]
pin-depends: [
  [ "mhttp.dev" "git+https://github.com/dinosaure/mhttp.git#0638dd4620757c0a8062afaa75d1546ae206a604" ]
]
