opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/vif"
dev-repo: "git+https://github.com/robur-coop/vif.git"
bug-reports: "https://github.com/robur-coop/vif/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.0.0"}
  "vif" {= version}
  "mhttp"
  "mhttp-server"
  "mirage-crypto-rng-mkernel"
]
conflicts: [ "result" {< "1.5"} ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j1" ] {arch != "s390x"}
]
synopsis: "A simple web framework for OCaml 5"
x-ci-accept-failures: ["debian-11"]
pin-depends: [
  [ "hurl.dev" "git+https://github.com/robur-coop/hurl.git#054446c616026e927de575c3e483cd6876a10068" ]
  [ "miou.dev" "git+https://github.com/robur-coop/miou.git#4e8fd306c305142035f65a1339ca1aa9f011c955" ]
  [ "httpcats.dev" "git+https://github.com/robur-coop/httpcats.git#6b19476a1fa95cdee34150ba8e4f5636d343b908" ]
  [ "mhttp.dev" "git+https://github.com/robur-coop/mhttp.git#58b096ec4e27786faa77cc9aeaa9d82364f5b653" ]
  [ "mhttp-server.dev" "git+https://github.com/robur-coop/mhttp.git#58b096ec4e27786faa77cc9aeaa9d82364f5b653" ]
  [ "mhttp-client.dev" "git+https://github.com/robur-coop/mhttp.git#58b096ec4e27786faa77cc9aeaa9d82364f5b653" ]
]
