(library
 (name vif)
 (public_name vif)
 (flags
  (:standard -linkall))
 (libraries
  multipart_form
  uri
  jsonm
  jsont
  jsont.bytesrw
  bytesrw
  cmdliner
  hmap
  hxd.core
  hxd.string
  fpath
  conan-database.light
  conan-unix
  decompress.zl
  decompress.gz
  mirage-crypto-rng-miou-unix
  multipart_form-miou
  tyxml
  httpcats
  tyre))
